Use remote registry instead of local one

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       return null;
     };
 
-    const REGISTRY_QUERY_URL = 'http://127.0.0.1:9000/q';
+    const REGISTRY_QUERY_URL = 'https://registry.webmr.io/q';
     const SIDES = ['left', 'right'];
     const FLOOR_SIZE = 20;
     const RAY_COLOR = 0x44c2ff;
